# hashing_algo_cuda

./: .gitignore  CMakeLists.txt  MD5cpuCrackerStarter.cpp  MD5cudaCrackerStarter.cu  MD5sslCrackerStarter.cpp  README.md  SHA1cpuCrackerStarter.cpp  SHA1cudaCrackerStarter.cu  SHA1sslCrackerStarter.cpp  WordsGenerator.cpp  add.cu  cracker.cpp  cracker.cu  cudaUtils.cuh  cuda_clion_hack.hpp  digestGenerator.cu  dummy.cpp  main.cpp  main.cu  testAlg.cu
constMemory/: test.sh
constMemory/const/: MD5CrackerStarter.cu  MD5Kernel.cu  MD5KernelHeader.cuh
constMemory/nonConst/: MD5CrackerStarter.cu  MD5Kernel.cu  MD5KernelHeader.cuh
hashing_algorithms/: IGenerator.cpp  MD5.cu  MD5_cpu.cpp  MD5_cpu_cracker.cpp  MD5_cuda.cu  MD5_cuda_cracker.cu  MD5_ssl.cpp  MD5cpuDigestGenerator.cpp  MD5cudaDigestGenerator.cu  MD5sslDigestGenerator.cpp  ResultComparator.cpp  ResultComparator.h
hashing_algorithms/crackers/: MD5_cpu_cracker.cpp  MD5_cuda_cracker.cu  SHA1_cpu_cracker.cpp  SHA1_cuda_cracker.cu
hashing_algorithms/crackers/include/: MD5_cpu_cracker.h  MD5_cuda_cracker.cuh  SHA1_cpu_cracker.h  SHA1_cuda_cracker.cuh
hashing_algorithms/generators/: MD5_cpu.cpp  MD5_cuda.cu  MD5cpuDigestGenerator.cpp  MD5cudaDigestGenerator.cu  MD5sslDigestGenerator.cpp  SHA1_cpu.cpp  SHA1_cuda.cu  SHA1_ssl.cpp  SHA1cpuDigestGenerator.cpp  SHA1cudaDigestGenerator.cu  SHA1sslDigestGenerator.cpp
hashing_algorithms/generators/include/: HashingAlgorithms.h  IGenerator.h  MD5_cpu.h  MD5_cuda.cuh  MD5cpuDigestGenerator.h  MD5cudaDigestGenerator.cuh  MD5sslDigestGenerator.h  SHA1_cpu.h  SHA1_cuda.cuh  SHA1_ssl.h  SHA1cpuDigestGenerator.h  SHA1cudaDigestGenerator.cuh  SHA1sslDigestGenerator.h
hashing_algorithms/include/: HashingAlgorithms.h  HashingArgorithms.h  IGenerator.h  IHashingAlgorithm.cuh  MD5.cuh  MD5_cpu.h  MD5_cpu_cracker.h  MD5_cuda.cuh  MD5_cuda_cracker.cuh  MD5_ssl.h  MD5cudaDigestGenerator.cuh  MD5sslDigestGenerator.h
include/: HexParser.h
loopTests/: MD5Loop.cu  MD5PragmaLoop.cu  MD5StepsList.cu  MD5cudaCrackerStarter.cu  test.sh
loopTests/include/: MD5KernelHeader.cuh
sharedMemory/: MD5CrackerStarter.cu  MD5KernelPrivate.cu  MD5KernelShared.cu  test.sh
tests/: md5_cuda_test.cpp  tests.cpp  tests.cu
threadsCount/: MD5CrackerStarter.cu  MD5Kernel.cu  test.sh
utils/: ResultComparator.cpp  WordsGenerator.cpp
utils/include/: HexParser.h  ResultComparator.h  WordsGenerator.h
